<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="Hello">안녕하세요</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="size_of_group">Size of group</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="book">Book</string>
    <string name="reset">Reset</string>
    <string name="details">Details</string>
</resources>