<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#79B2CC"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                app:srcCompat="@drawable/korean_flag" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Hello"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="@string/full_name" />

            <LinearLayout
                android:layout_width="309dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/phone_number" />

            <LinearLayout
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="118dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/size_of_group" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="350dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_horizontal"
                android:text="@string/choose_date"
                android:textSize="30dp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <View
                android:id="@+id/view2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/choose_time"
                android:textSize="30sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:amPmBackgroundColor="#FFFFFF"
                android:headerBackground="@color/purple_700"
                android:numbersBackgroundColor="#F44336"
                android:numbersSelectorColor="#FF9800" />

            <RadioGroup
                android:id="@+id/Option"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Smoking"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking_area" />

                <RadioButton
                    android:id="@+id/NonSmoking"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/non_smoking_area" />

                <Button
                    android:id="@+id/Book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book" />

            </RadioGroup>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <View
                android:id="@+id/view3"
                android:layout_width="350dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/details"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/DisplayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/DisplayTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>